--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ author :
 #
 JB :
   version : 0.3.0
-
+  bootswatch: 
   # All links will be namespaced by BASE_PATH if defined.
   # Links in your website should always be prefixed with {{BASE_PATH}}
   # however this value will be dynamically changed depending on your deployment situation.
